--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h2 {
 
 nav {
 
+
   background-color: #00ffe5;
   padding: 0;
   text-align: center;
@@ -39,7 +40,6 @@ nav {
 
 nav li {
 
-  display: inline-grid;
   text-align: center;
   padding: 1em;
   text-indent: 0;
@@ -51,9 +51,16 @@ nav li:hover {
   background-color: #008a7c;
 }
 
+ul {
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 input {
 
-  display: grid;
+  display: flex;
   font-size: 2em;
   margin: 0.25em;
   min-width: 100%;
@@ -82,6 +89,7 @@ p {
 
 img {
 
+  display: flex;
   height: auto;
   max-width: 100%;
 
