--- a/style.css
+++ b/style.css
@@ -56,14 +56,17 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  max-width: 100%;
 }
 
 input {
 
   display: flex;
-  min-width: 0;
+  flex-direction: column;
+  justify-content: center;
   font-size: 2em;
   margin: 0.25em;
+  width: 100%;
 }
 
 section {
