--- a/style.css
+++ b/style.css
@@ -86,8 +86,10 @@ p {
 img {
   display: flex;
   flex-flow: row wrap;
-  height: auto;
-  max-width: 100%;
+  height: 50%;
+  width: 50%;
+  object-fit: contain;
+
 }
 
 @media (min-width: 1235px) {
