--- a/style.css
+++ b/style.css
@@ -64,6 +64,14 @@ section {
   padding: 2em;
 }
 
+#titles{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  background-color: #d9f0a3;
+}
+
 #content {
   padding: 0.5em;
 }
@@ -75,12 +83,15 @@ p {
 #content section {
   border-left: 0.51em solid #008a7c;
   margin-bottom: 0.5em;
+  max-width: 70%;
 }
 
-#cart-start {
+#cart {
   background-color: #8FBC8F;
   border: dashed;
   border-color: black;
+  display: flex;
+  flex-flow: column;
 }
 
 img {
@@ -89,6 +100,12 @@ img {
   height: 50%;
   width: 50%;
   object-fit: contain;
+}
+
+main {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column 2;
 }
 
 @media (min-width: 1235px) {
