--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@ p {
   flex-flow: column;
 }
 
+#cart-items {
+  display: flex;
+  flex-direction: column;
+}
+
 img {
   display: flex;
   flex-flow: row wrap;
@@ -108,6 +113,7 @@ main {
   justify-content: space-between;
 }
 
+/*
 @media (min-width: 1235px) {
   section li {
     display: flex;
@@ -115,3 +121,4 @@ main {
     width: 100%;
   }
 }
+*/
