--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ input {
   width: 100%;
 }
 
+form section ul li {
+  margin: 0.625em;
+}
+
 section {
   background-color: #5cffbe;
   padding: 2em;
